Game Status Designed

--- a/index.html
+++ b/index.html
@@ -38,13 +38,20 @@
           <li>
             <article class="player-2">
               <h3>Player-1</h3>
-              <h2>F</h2>
-              <h2>O</h2>
+              <h2>Faizan Ahmad</h2>
+              <h2>X</h2>
               <button>Rename</button>
             </article>
           </li>
         </ul>
-        <button class="btn">Start Game!</button>
+        <button class="btn start-game">Start Game!</button>
+      </section>
+      <section class="game-status">
+        <article>
+          <p>You won! <span class="winner-name">Player Name</span></p>
+
+          <p>Click above button "Start Game" to start a new game.</p>
+        </article>
       </section>
     </main>
   </body>
