Game section designed. now to JavaScript

--- a/index.html
+++ b/index.html
@@ -49,9 +49,24 @@
       <section class="game-status">
         <article>
           <p>You won! <span class="winner-name">Player Name</span></p>
-
           <p>Click above button "Start Game" to start a new game.</p>
         </article>
+      </section>
+      <section class="game">
+        <p>Your turn <span class="player-turn">Player Name</span></p>
+        <ul class="game-board">
+          <li>X</li>
+          <li></li>
+          <li>X</li>
+
+          <li></li>
+          <li>O</li>
+          <li></li>
+
+          <li></li>
+          <li>O</li>
+          <li></li>
+        </ul>
       </section>
     </main>
   </body>
