Renaming is working now

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
           <li>
             <article class="player-1">
               <h3>Player-1</h3>
-              <h2>f</h2>
+              <h2>Player 1</h2>
               <h2>O</h2>
-              <button class="rename-player1-btn">Rename</button>
+              <button class="rename-player1-btn" data-player="1">Rename</button>
             </article>
           </li>
           <li>
             <article class="player-2">
-              <h3>Player-1</h3>
-              <h2>Faizan Ahmad</h2>
+              <h3>Player-2</h3>
+              <h2>Player 2</h2>
               <h2>X</h2>
-              <button class="rename-player1-btn">Rename</button>
+              <button class="rename-player2-btn" data-player="2">Rename</button>
             </article>
           </li>
         </ul>
