--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </article>
           </li>
         </ul>
-        <button class="btn start-game">Start Game!</button>
+        <button class="btn start-game" id="start-game-btn">Start Game!</button>
       </section>
       <section class="game-status">
         <article>
@@ -57,17 +57,17 @@
       <section class="game">
         <p>Your turn <span class="player-turn">Player Name</span></p>
         <ul class="game-board">
-          <li>X</li>
-          <li></li>
-          <li>X</li>
+          <li data-col="1" data-row="1"></li>
+          <li data-col="2" data-row="1"></li>
+          <li data-col="3" data-row="1"></li>
 
-          <li></li>
-          <li>O</li>
-          <li></li>
+          <li data-col="1" data-row="2"></li>
+          <li data-col="2" data-row="2"></li>
+          <li data-col="3" data-row="2"></li>
 
-          <li></li>
-          <li>O</li>
-          <li></li>
+          <li data-col="1" data-row="3"></li>
+          <li data-col="2" data-row="3"></li>
+          <li data-col="3" data-row="3"></li>
         </ul>
       </section>
     </main>
